style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);

/* CODE BY LETTERFORMS AND MAGIC DESIGN STUDIO */

body {
	height: 100%;
	width: 100%;
	font-family: 'Roboto', sans-serif;
}

a {
	color: inherit;
	text-decoration: inherit;
}

.inline-link {
  color: black;
  text-decoration: underline;
}

.space {
  letter-spacing: 2px;
  font-weight: 400;
}

p {
	font-weight: 300;
	font-size: 15px;
	text-align: justify;
  line-height: 18px;
}

.italic {
  font-style: italic;
  font-weight: 300;
  font-size: 15px;
  text-align: justify;
}

.footnote-italic {
  font-style: italic;
  font-weight: 300;
  font-size: 11px;
  text-align: left;
}

h3 {
	color: #000000;
  font-weight: 500;
  font-size: 30px;
  text-align: left;
}

h4 {
  color: #000000;
  font-weight: 500;
  font-size: 20px;
}

/* TOPBAR */
.topbar {
	width: 100vw;
	height: 60px;
	display: flex;
	align-items: center;
	padding-left: 20px;
	background: #000000;
	position: fixed;
	top: 0;
	z-index: 10;
	margin-left: -8px;

}

.logo {
	color: #ffffff;
	width: 600px;
	text-align: left;
	font-weight: 500;
	font-size: 20px;
	padding: 0.43vw;
	letter-spacing: 10px;
}

.logo_small {
  visibility: hidden;
}

.tabs {
	display: flex;
	align-items: center;
	position: absolute;
	right: 60px;
}

.tab {
	min-width: 60px;
	margin: 4px;
	text-align: center;
	font-weight: 400;
	font-size: 20px;
	letter-spacing: 1px;
	padding: 6px;
	cursor: pointer;
	color: #ffffff;
}

.tab:hover {

	border-bottom: 1px solid #ffffff;
}

/* IMAGE GRID */

.grid3 {
  --gap: 0em;
  min-width: 100vw;
  display: grid;
  grid-gap: var(--gap);
  grid-template-columns: 34vw 34vw 34vw;
  grid-template-rows: auto;
  margin-top: 30px;
  margin-left: -8px;
  position: relative;
  float: left;
}

.grid3 > * {
  break-inside: avoid;
  margin-bottom: -7px;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

.grid2 {
  --gap: 0em;
  --columns: 2;
  display: column;
  columns: var(--columns);
  max-width: 100vw;
  grid-gap: 0em;
  margin-top: 60px;
}

.white {
	background-color: #ffffff;
}

.black {
	background-color: #000000;
}

.starry-firmament {
  background-image: url("links/paul-nash.jpg");
  background-size: cover;
}


.desna {
  width: 30vw;
  margin-left: 60px;
  z-index: 2;
}

.grid2 > * {
  break-inside: avoid;
  margin-bottom: -7px;
}

img {
  max-width: 100%;
}

.projekti {
	min-width: 100vw;
}

.grid3 > * {
  position: relative;
  text-align: center;
  color: white;
}

.b {
background-color: black;
opacity: 1;
}

.centered {
  position: absolute;
  opacity: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.cursor {
  width:600px;
  height:400px;
  cursor: url("icons/chess_queen3.png"), auto;
  pointer-events: auto;

}

/* MEDIA QUERIES */

/*PROJEKTI*/

.projekti-mob {
  display: none;
}
.projekti {
  display: block;
}

@media screen and (max-width: 900px){

  .mob-hidden {
    display: none;
  }

  .logo {
    visibility: hidden;
  }

  .logo_small {
  visibility: visible;
  color: #ffffff;
  width: 100px;
  text-align: left;
  font-weight: 500;
  font-size: 18px;
  padding: 0.43vw;
  letter-spacing: 10px;
  }

.tabs {
  right: 20px;
  }

.tab {
  font-size: 18px;
  }

.grid3 {
  --gap: 0em;
  min-width: 100vw;
  display: grid;
  grid-template-columns: 100vw;
  grid-template-rows: auto;
  grid-gap: 0em;
  margin-top: 60px;
  flex-grow: 1;
}

.grid3 > * {
  break-inside: avoid;
  margin-bottom: -7px;
}

.grid2 {
  --gap: 0em;
  --columns: 1;
  max-width: 100vw;
  display: column;
  columns: var(--columns);
  grid-gap: 0em;
  margin-top: 60px;
  flex-grow: 1;
}

.grid2 > * {
  break-inside: avoid;
  margin-bottom: -7px;

}

/*PROJEKTI*/

.projekti {
  display: none;
}

.projekti-mob {
  display: block;
}

.footer-content {
  margin-bottom: 60px;
}

.about-post {
  padding: 30px;
  padding-top: 5px;
  font-weight: 300;
  font-size: 15px;
  text-align: left;
  margin-top: 150px;
  margin-left: 10px;
  margin-bottom: 40px;
  background-color: white;
  text-align: justify;
  text-justify: inter-word;
  break-inside: avoid-column;
  width: 400px;
  max-width: 100vw;
}

p {
  text-align: left;
}

}

/* ABOUT */

.about-post {
  padding: 30px;
  padding-top: 5px;
  font-weight: 300;
  font-size: 15px;
  text-align: left;
  margin-top: 150px;
  margin-left: 40vw;
  margin-bottom: 40px;
  background-color: white;
  text-align: justify;
  text-justify: inter-word;
  break-inside: avoid-column;
  max-width: 80vh;
}



/* FOOTER */

article {
    min-height: 100%;
    display: flex;
    flex-direction: column;
    align-items: stretch;
}

.footer-content {
  color: #ffffff;
	margin-top: -20px;
  height: 20px;
	margin-left: 20px;
}

.topbar, .grid3, footer {
    flex-shrink: 0;
}


}
._12 {
    font-size: 1.2em;
}
._14 {
    font-size: 1.4em;
}
ul {
    padding:0;
    list-style: none;
}

li {
  color: #ffffff;
  font-weight: 300;
  font-size: 15px;
}

.social-icons li {
    display: inline-flex;
    padding-left: 20px;
    margin-top: 10px;
    margin-bottom: 10px;
    height: 20px;
}
.social-icons a {
    color: #9d9d9c;
    text-decoration: none;
}

 .fa-twitter, .fa-instagram, .fa-linkedin, .fa-facebook-square {
    padding:10px 14px;
    -o-transition:.5s;
    -ms-transition:.5s;
    -moz-transition:.5s;
    -webkit-transition:.5s;
    transition: .5s;
    background-color: #000000;
}

.social-icon:hover {
	color: #ffffff;
}

